--- a/app/src/main/res/layout/fragment_one.xml
+++ b/app/src/main/res/layout/fragment_one.xml
@@ -6,7 +6,6 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context=".MainActivity"
-    android:paddingTop="128dp"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingBottom="@dimen/activity_vertical_margin">
@@ -35,13 +34,15 @@
         android:ems="10"
         android:hint="Email"
         android:inputType="text" />
+
     <EditText
         android:id="@+id/editTextNama"
-        android:drawableStart="@drawable/account_icon"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:drawableStart="@drawable/account_icon"
         android:ems="10"
         android:hint="Nama" />
+
     <EditText
         android:id="@+id/editTextAlamat"
         android:drawableStart="@drawable/address_icon"
@@ -49,6 +50,18 @@
         android:layout_height="wrap_content"
         android:ems="10"
         android:hint="Alamat" />
+
+    <Button
+        android:id="@+id/pickDatebtn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="TGL"/>
+    <TextView
+        android:id="@+id/dateTV"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Date"/>
+
 
     <Button
         android:id="@+id/btnRegister_activity"
@@ -60,6 +73,8 @@
         android:textSize="25sp"
         android:text="REGISTER"
         android:textColor="@color/white"/>
+
+
 
 
 </LinearLayout>
